--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,6 @@
-/*! tailwindcss v2.2.19 | MIT License | https://tailwindcss.com */
+/* tailwind css */
+
+/* ! tailwindcss v2.2.19 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
@@ -188545,4 +188547,7 @@ select {
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
+
+
+
 
