--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,7 +1,7 @@
+/* tailwind css */
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
-
-@import 'components/button';
-@import 'components/form';
-
 @import 'tailwindcss/utilities';
+
+
+
